Changes from version 1.0.1
-------------------------
* Fixed a timestamp bug in eZ forum message.
* Added assignment of articles to multiple categories.
* Fixed deleting of cached printed version, when an article is updated.
* Added showing of number of users registered.
* Stripped tags from forum messages.

Changes from version 1.0
------------------------
* Added printable version of the articles
* Fixed broken search in links
* Fixed broken search in article admin
* Disabled the possibility to set an unactive poll to 
  main poll.
* Fixed editing of user addresses, if enabled.
* Fixed editing and deleting of forum messsages in the admin interface.
* Added more logging.
* Fixed displaying of wrong author name in forum message view.
* Fixed some translation errors