@@ -2,14 +2,14 @@
 // Version information
 if ( $VersionQuery == "show" )
 {
-    print( "eZ publish v1.0" );
+    print( "eZ publish v1.0.2" );
     exit();
 }
 
-//  header("Expires: Mon, 26 Jul 1997 05:00:00 GMT"); 
-//  header("Last-Modified: " . gmdate("D, d M Y H:i:s") . "GMT"); 
-//  header("Cache-Control: no-cache, must-revalidate"); 
-//  header("Pragma: no-cache");
+header("Expires: Mon, 26 Jul 1997 05:00:00 GMT"); 
+header("Last-Modified: " . gmdate("D, d M Y H:i:s") . "GMT"); 
+header("Cache-Control: no-cache, must-revalidate"); 
+header("Pragma: no-cache");
 
 ob_start();
 
